--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.26.3",
     "swr": "^2.3.6",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
